tests/en/errors/repeat_nested_id.salam
// EXPECT: E019
layout:
    box: repeat = 2
        paragraph: id = "inner"  content = "x" end
    end
end
